# gst-plugin-millcolor

./: Makefile.am  README  millcolor.c  millcolor.h
